vlingo-xoom-kubernetes-microservice/deployment/gloo/order-virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: order-static-access
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: order-upstream
              namespace: gloo-system
        options:
          autoHostRewrite: true
